--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.3",
     "@react-navigation/native-stack": "^6.9.9",
+    "@react-native-firebase/app": "^16.7.0",
     "react": "18.2.0",
     "react-native": "0.71.1",
     "react-native-safe-area-context": "^4.5.0",
