--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   },
   "dependencies": {
     "@react-navigation/native": "^6.1.3",
-    "@react-navigation/native-stack": "^6.9.9",
     "@react-native-firebase/app": "^16.7.0",
+    "@react-navigation/native": "^6.1.3",
+    "@react-navigation/native-stack": "^6.9.9",
     "react": "18.2.0",
     "react-native": "0.71.1",
     "react-native-safe-area-context": "^4.5.0",
