--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native-stack": "^6.9.9",
     "react": "18.2.0",
     "react-native": "0.71.1",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.19.0"
   },
