Add better linting & prettier support

--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.50.0",
+    "@typescript-eslint/parser": "^5.50.0",
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
