--- a/ios/Podfile
+++ b/ios/Podfile
@@ -3,7 +3,7 @@ $RNFirebaseAsStaticFramework = true
 require_relative '../node_modules/react-native/scripts/react_native_pods'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 
-platform :ios, min_ios_version_supported
+platform :ios, '16.2'
 prepare_react_native_project!
 
 # If you are using a `react-native-flipper` your iOS build will fail when `NO_FLIPPER=1` is set.
@@ -23,6 +23,13 @@ if linkage != nil
   use_frameworks! :linkage => linkage.to_sym
 end
 
+# React Native Maps dependencies
+# The following line is only needed if building on an Apple silicon Mac without rosetta.
+
+
+rn_maps_path = '../node_modules/react-native-maps'
+pod 'react-native-google-maps', :path => rn_maps_path
+pod 'Google-Maps-iOS-Utils'
 
 target 'CrowdEease' do
   config = use_native_modules!
