--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-calendars": "^1.1293.0",
     "react-native-inset-shadow": "^1.0.3",
     "react-native-linear-gradient": "^2.6.2",
+    "react-native-maps": "^1.4.0",
     "react-native-paper": "^5.2.0",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.19.0",
