--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "18.2.0",
     "react-native": "0.71.1",
     "react-native-calendars": "^1.1293.0",
+    "react-native-inset-shadow": "^1.0.3",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-maps": "^1.4.0",
     "react-native-paper": "^5.2.0",
