--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "react-native-paper": "^5.2.0",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.19.0",
+    "react-native-svg": "^13.8.0",
+    "react-native-svg-charts": "^5.4.0",
     "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
