--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-native-paper": "^5.2.0",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.19.0",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-vector-icons": "^9.2.0",
+    "uuid-random": "^1.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
