--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "react-native-svg-charts": "^5.4.0",
     "react-native-text-gradient": "^0.1.7",
     "react-native-vector-icons": "^9.2.0",
-    "react-query": "^3.39.3"
+    "react-query": "^3.39.3",
     "uuid-random": "^1.3.2"
   },
   "devDependencies": {
