--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-firebase/app": "^16.7.0",
     "@react-native-firebase/auth": "^17.0.0",
     "@react-native-google-signin/google-signin": "^9.0.2",
+    "@react-native-masked-view/masked-view": "^0.2.8",
     "@react-navigation/bottom-tabs": "^6.5.5",
     "@react-navigation/material-bottom-tabs": "^6.2.13",
     "@react-navigation/native": "^6.1.3",
