--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/material-bottom-tabs": "^6.2.13",
     "@react-navigation/native": "^6.1.3",
     "@react-navigation/native-stack": "^6.9.9",
+    "@types/react-native-snap-carousel": "^3.8.5",
     "axios": "^1.3.4",
     "react": "18.2.0",
     "react-native": "0.71.1",
@@ -30,6 +31,7 @@
     "react-native-paper": "^5.2.0",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.19.0",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^13.8.0",
     "react-native-svg-charts": "^5.4.0",
     "react-native-text-gradient": "^0.1.7",
