--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react-native-snap-carousel": "^3.8.5",
     "axios": "^1.3.4",
     "deprecated-react-native-prop-types": "^4.0.0",
+    "date-fns": "^2.29.3",
     "react": "18.2.0",
     "react-native": "0.71.1",
     "react-native-calendars": "^1.1294.0",
