--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/native-stack": "^6.9.9",
     "@types/react-native-snap-carousel": "^3.8.5",
     "axios": "^1.3.4",
+    "date-fns": "^2.29.3",
     "react": "18.2.0",
     "react-native": "0.71.1",
     "react-native-calendars": "^1.1294.0",
