--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lint": "eslint .",
     "start": "react-native start",
     "test": "jest",
-    "menu": "adb shell input keyevent 82"
+    "menu": "adb shell input keyevent 82",
+    "postinstall": "npx patch-package"
   },
   "dependencies": {
     "@react-native-firebase/app": "^16.7.0",
@@ -21,6 +22,7 @@
     "@react-navigation/native-stack": "^6.9.9",
     "@types/react-native-snap-carousel": "^3.8.5",
     "axios": "^1.3.4",
+    "deprecated-react-native-prop-types": "^4.0.0",
     "react": "18.2.0",
     "react-native": "0.71.1",
     "react-native-calendars": "^1.1294.0",
