--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "react-native-svg-charts": "^5.4.0",
     "react-native-text-gradient": "^0.1.7",
     "react-native-vector-icons": "^9.2.0",
-    "react-query": "^3.39.3"
+    "react-query": "^3.39.3",
+    "victory-native": "^36.6.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
