--- a/ios/CrowdEease/Info.plist
+++ b/ios/CrowdEease/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>CrowdEease</string>
+	<string>CrowdEase</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -47,7 +47,20 @@
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string/>
+	<string></string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>CircularStd-Black.otf</string>
+		<string>CircularStd-BlackItalic.otf</string>
+		<string>CircularStd-Bold.otf</string>
+		<string>CircularStd-BoldItalic.otf</string>
+		<string>CircularStd-Book.otf</string>
+		<string>CircularStd-BookItalic.otf</string>
+		<string>CircularStd-Light Italic.otf</string>
+		<string>CircularStd-Light.otf</string>
+		<string>CircularStd-Medium.otf</string>
+		<string>CircularStd-MediumItalic.otf</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -62,18 +75,5 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
-	<key>UIAppFonts</key>
-	<array>
-		<string>CircularStd-Black.otf</string>
-		<string>CircularStd-BlackItalic.otf</string>
-		<string>CircularStd-Bold.otf</string>
-		<string>CircularStd-BoldItalic.otf</string>
-		<string>CircularStd-Book.otf</string>
-		<string>CircularStd-BookItalic.otf</string>
-		<string>CircularStd-Light Italic.otf</string>
-		<string>CircularStd-Light.otf</string>
-		<string>CircularStd-Medium.otf</string>
-		<string>CircularStd-MediumItalic.otf</string>
-	</array>
 </dict>
 </plist>
