--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "18.2.0",
     "react-native": "0.71.1",
     "react-native-calendars": "^1.1294.0",
+    "react-native-fast-image": "^8.6.3",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-inset-shadow": "^1.0.3",
     "react-native-linear-gradient": "^2.6.2",
