--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "deprecated-react-native-prop-types": "^4.0.0",
     "react": "18.2.0",
     "react-native": "0.71.1",
+    "react-native-bootsplash": "^4.6.0",
     "react-native-calendars": "^1.1294.0",
     "react-native-fast-image": "^8.6.3",
     "react-native-geolocation-service": "^5.3.1",
