--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-inset-shadow": "^1.0.3",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-maps": "^1.4.0",
+    "react-native-mmkv": "^2.8.0",
     "react-native-onesignal": "^4.5.1",
     "react-native-paper": "^5.2.0",
     "react-native-safe-area-context": "^4.5.0",
