--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native": "0.71.1",
     "react-native-bootsplash": "^4.6.0",
     "react-native-calendars": "^1.1294.0",
+    "react-native-dotenv": "^3.4.8",
     "react-native-fast-image": "^8.6.3",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-inset-shadow": "^1.0.3",
